Corrected spacing

--- a/style.css
+++ b/style.css
@@ -6,20 +6,23 @@
     --dark-charcoal: #333333;
 }
 h1, h2, h3, h4, h5, h6, p {
-    margin-top: 0px;
-    margin-bottom: 0px;
+    margin-top: 0;
+    margin-bottom: 0;
 }
 .container {
     max-width: 800px;
-    margin: 20px auto;
+    margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
 }
+.column {
+    margin-top: 20px;
+}
 .column-left {
-    flex-basis: calc(30% - 20px);
+    flex-basis: 30%;
 }
 .column-right {
-    flex-basis: calc(70% - 20px);
+    flex-basis: 70%;
 }
 @media (max-width: 768px) {
     .column-left, .column-right {
